--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backyard Football League</title>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Inter:wght@400;600;700&display=swap"
         rel="stylesheet">
-    
-    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -18,18 +17,165 @@
       tailwind.config = {
         theme: {
           extend: {
-            // This adds your custom font
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
               bangers: ['Bangers', 'cursive'],
             },
-            // This is the fix for your stacked attributes
             gridTemplateColumns: {
               '17': 'repeat(17, minmax(0, 1fr))',
             }
           }
         }
       }
+    </script>
+
+    <script type="text/tailwindcss">
+        @layer base {
+            .font-bangers {
+                font-family: 'Bangers', cursive;
+            }
+        }
+
+        @layer components {
+            /* --- Player Card & Interactivity --- */
+            .player-card {
+                @apply transition-transform duration-200 ease-in-out shadow-md;
+            }
+            .player-card:hover {
+                @apply -translate-y-1 shadow-lg;
+            }
+            .player-card.selected {
+                @apply -translate-y-1 shadow-lg border-2 border-amber-500;
+            }
+
+            /* --- Dashboard Tabs --- */
+            .tab-button {
+                @apply p-2 rounded font-semibold text-sm text-gray-600 text-left transition-colors duration-200 mb-1 flex items-center gap-2;
+            }
+            .tab-button:hover {
+                @apply bg-gray-100;
+            }
+            .tab-button.active {
+                @apply bg-amber-500 text-white;
+            }
+            .notification-dot {
+                @apply absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full border-2 border-white;
+            }
+            .sub-tabs {
+                @apply flex gap-4 border-b mb-4 pb-2;
+            }
+            .sub-tab {
+                @apply py-2 px-4 font-semibold text-gray-500 border-b-2 border-transparent hover:text-gray-800;
+            }
+            .sub-tab.active {
+                @apply text-amber-600 border-amber-600;
+            }
+
+            /* --- Draft Screen --- */
+            #draft-screen thead th[data-sort] {
+                @apply cursor-pointer select-none;
+            }
+            #draft-screen thead th[data-sort]:hover {
+                @apply bg-gray-700;
+            }
+            .sort-indicator {
+                @apply text-xs pl-1 align-middle inline-block w-4;
+            }
+
+            /* --- Dashboard & Roster --- */
+            .status-tag {
+                @apply inline-block text-xs font-bold mr-1 px-1 rounded;
+            }
+            .status-tag.temporary {
+                @apply bg-blue-200 text-blue-800;
+            }
+            .status-tag.permanent {
+                @apply bg-gray-200 text-gray-800;
+            }
+            .message-item {
+                @apply p-3 rounded-lg cursor-pointer hover:bg-gray-200;
+            }
+            .player-win {
+                @apply bg-green-100 border-l-4 border-green-500;
+            }
+            .player-loss {
+                @apply bg-red-100 border-l-4 border-red-500;
+            }
+
+            /* --- Depth Chart (merged from your css file) --- */
+            .depth-chart-content {
+                @apply grid grid-cols-1 lg:grid-cols-3 gap-6;
+            }
+            .depth-chart-starters {
+                @apply lg:col-span-2 space-y-4;
+            }
+            .depth-chart-bench {
+                @apply lg:col-span-1 bg-gray-50 p-3 rounded-lg;
+            }
+            .player-group {
+                @apply bg-gray-100 rounded-lg overflow-hidden;
+            }
+            .player-group-title {
+                @apply flex justify-between items-center p-3 bg-gray-200;
+                @apply font-bold text-gray-800;
+            }
+            .roster-list {
+                @apply space-y-2 max-h-96 overflow-y-auto;
+            }
+            .depth-chart-slot {
+                @apply bg-gray-200 p-2 rounded flex items-center justify-between text-xs;
+            }
+            .depth-chart-slot[draggable="true"] {
+                @apply cursor-move;
+            }
+            .depth-chart-slot.drag-over {
+                @apply ring-2 ring-amber-500 ring-inset;
+            }
+            .draggable-player {
+                @apply bg-white p-2 rounded shadow-sm cursor-move border border-gray-200;
+            }
+            .draggable-player.dragging {
+                @apply opacity-50 ring-2 ring-amber-500;
+            }
+            .player-details-grid {
+                @apply grid gap-1 text-center;
+            }
+
+            /* --- Game Sim & Modal --- */
+            .game-log {
+                font-family: 'Courier New', Courier, monospace;
+            }
+            canvas#field-canvas {
+                @apply bg-green-700 max-w-full h-auto m-auto block;
+                border-top: 2px solid rgba(255, 255, 255, 0.5);
+                border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+            }
+            .broadcast-scoreboard {
+                @apply shadow-lg;
+                font-family: 'Inter', sans-serif;
+            }
+            .broadcast-scoreboard .broadcast-top {
+                @apply flex justify-between items-center;
+            }
+            .broadcast-scoreboard .broadcast-body {
+                @apply py-1 px-2;
+            }
+            .broadcast-scoreboard .broadcast-team {
+                @apply flex justify-between items-center;
+            }
+            .broadcast-scoreboard .team-name {
+                @apply text-gray-200;
+            }
+            .broadcast-scoreboard .team-score {
+                @apply text-white;
+            }
+            .broadcast-scoreboard .team-score.home {
+                @apply text-amber-400;
+            }
+            .broadcast-scoreboard .team-score.away {
+                @apply text-blue-400;
+            }
+        }
     </script>
 </head>
 
