--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 
   <script>
     tailwind.config = {
@@ -403,7 +403,7 @@
     </div>
   </div>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="js/main.js"></script>
 
 </body>
 
