--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </p>
       </div>
 
-      <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
-        <div class="lg:col-span-3 bg-white rounded-lg shadow p-4 overflow-hidden">
+      <div class="grid grid-cols-1 lg:grid-cols-6 gap-4">
+        <div class="lg:col-span-5 bg-white rounded-lg shadow p-4 overflow-hidden"></div>
           <h3 class="text-xl font-bold mb-4">Draft Pool</h3>
           <div class="flex gap-4 mb-4">
             <input type="text" id="draft-search" placeholder="Search by name..." class="p-2 border rounded w-full">
