--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
 
-<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <script>
     tailwind.config = {
@@ -79,7 +79,9 @@
       </div>
 
       <div class="grid grid-cols-1 lg:grid-cols-12 gap-4">
-        <div class="lg:col-span-9 bg-white rounded-lg shadow p-4 overflow-hidden"></div>
+
+        <div class="lg:col-span-9 bg-white rounded-lg shadow p-4 overflow-hidden">
+
           <h3 class="text-xl font-bold mb-4">Draft Pool</h3>
           <div class="flex gap-4 mb-4">
             <input type="text" id="draft-search" placeholder="Search by name..." class="p-2 border rounded w-full">
@@ -99,7 +101,7 @@
           </div>
 
           <div class="overflow-x-auto" style="max-height: 60vh;">
-            <table class="min-w-full text-sm">
+            <table class="min-w-full text-sm w-full table-fixed">
               <thead class="bg-gray-800 text-white sticky top-0">
                 <tr>
                   <th class="py-2 px-3 text-left" data-sort="name">Name<span class="sort-indicator"></span></th>
@@ -126,8 +128,8 @@
               </tbody>
             </table>
           </div>
-        </div>
 
+        </div>
         <div class="lg:col-span-3 space-y-4">
           <div class="bg-white rounded-lg shadow p-4">
             <h4 class="text-lg font-bold mb-2">Selected Player</h4>
@@ -148,6 +150,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
