--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="bg-gray-100 text-gray-900 antialiased">
 
-  <div class="container mx-auto p-4 max-w-7xl">
+  <div class="container mx-auto p-4">
 
     <section id="start-screen" class="screen text-center p-8 bg-white rounded-lg shadow-lg">
       <h1 class="font-display text-6xl text-amber-500 mb-4">Football GM</h1>
